Added change user avatar functionality

--- a/package.json
+++ b/package.json
@@ -21,8 +21,12 @@
     "@quasar/extras": "^1.0.0",
     "axios": "^0.18.1",
     "core-js": "^3.6.5",
+    "cropperjs": "^1.5.9",
     "firebase": "^7.24.0",
+    "pica": "^6.1.1",
     "quasar": "^1.0.0",
+    "v-money": "^0.8.1",
+    "vue-cropperjs": "^4.2.0",
     "vue-easy-dnd": "^1.10.2",
     "vue-smooth-dnd": "^0.8.1",
     "vuedraggable": "^2.24.3",
