--- a/functions/package.json
+++ b/functions/package.json
@@ -8,7 +8,7 @@
     "start": "npm run shell",
     "deploy": "firebase deploy --only functions",
     "logs": "firebase functions:log",
-    "test": "mocha --timeout 15000 --exit"
+    "test": "jest ./spec --detectOpenHandles"
   },
   "engines": {
     "node": "10"
@@ -20,11 +20,9 @@
     "firebase-functions": "^3.6.1"
   },
   "devDependencies": {
-    "@firebase/rules-unit-testing": "^1.1.3",
     "eslint": "^5.12.0",
     "eslint-plugin-promise": "^4.0.1",
-    "firebase-functions-test": "^0.2.0",
-    "mocha": "^8.2.1"
+    "firebase-functions-test": "^0.2.0"
   },
   "private": true
 }
