--- a/package.json
+++ b/package.json
@@ -7,7 +7,6 @@
   "private": true,
   "scripts": {
     "lint": "eslint --ext .js,.vue ./",
-    "test": "echo \"No test specified\" && exit 0",
     "devIOS": "quasar dev -m capacitor -T ios",
     "devAndroid": "quasar dev -m capacitor -T android",
     "buildIOS": "quasar build -m capacitor -T ios",
@@ -15,7 +14,8 @@
     "emulators1": "firebase emulators:start --import=dir/base1",
     "emulators2": "firebase emulators:start --import=dir/base2",
     "emulators3": "firebase emulators:start --import=dir/base3",
-    "emulators4": "firebase emulators:start --import=dir/base4"
+    "emulators4": "firebase emulators:start --import=dir/base4",
+    "test": "jest ./spec --detectOpenHandles"
   },
   "dependencies": {
     "@quasar/extras": "^1.0.0",
@@ -34,6 +34,7 @@
     "vuexfire": "^3.2.4"
   },
   "devDependencies": {
+    "@firebase/rules-unit-testing": "^1.1.6",
     "@quasar/app": "^2.0.0",
     "@vue/eslint-config-prettier": "^6.0.0",
     "babel-eslint": "^10.0.1",
@@ -46,6 +47,7 @@
     "eslint-plugin-promise": "^4.0.1",
     "eslint-plugin-standard": "^4.0.0",
     "eslint-plugin-vue": "^6.1.2",
+    "jest": "^26.6.3",
     "prettier": "^2.1.2"
   },
   "browserslist": [
