--- a/.gitignore
+++ b/.gitignore
@@ -24,6 +24,8 @@ node_modules
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
+firestore-debug.log
+/functions/firestore-debug.log
 
 # Editor directories and files
 .idea
@@ -31,3 +33,11 @@ yarn-error.log*
 *.ntvs*
 *.njsproj
 *.sln
+
+# Upload spreadsheets & JSON files
+/src/JSONFiles
+/downloads
+/dir
+
+# Test files
+/spec
