--- a/package.json
+++ b/package.json
@@ -7,10 +7,15 @@
   "private": true,
   "scripts": {
     "lint": "eslint --ext .js,.vue ./",
+    "deploy-test": "quasar build && firebase deploy -P staging",
+    "deploy-prod": "quasar build && firebase deploy -P prod",
     "devIOS": "quasar dev -m capacitor -T ios",
     "devAndroid": "quasar dev -m capacitor -T android",
     "buildIOS": "quasar build -m capacitor -T ios",
     "buildAndroud": "quasar build -m capacitor -T android",
+    "icons": "icongenie generate -i icon.png --skip-trim --theme-color ac4745",
+    "deploy-test-pwa": "quasar build -m pwa && firebase deploy -P staging",
+    "deploy-prod-pwa": "quasar build -m pwa && firebase deploy -P prod",
     "emulators1": "firebase emulators:start --import=dir/base1",
     "emulators2": "firebase emulators:start --import=dir/base2",
     "emulators3": "firebase emulators:start --import=dir/base3",
@@ -45,7 +50,8 @@
     "eslint-plugin-standard": "^4.0.0",
     "eslint-plugin-vue": "^6.1.2",
     "jest": "^26.6.3",
-    "prettier": "^2.1.2"
+    "prettier": "^2.1.2",
+    "workbox-webpack-plugin": "^5.1.4"
   },
   "browserslist": [
     "last 10 Chrome versions",
