--- a/functions/package.json
+++ b/functions/package.json
@@ -7,7 +7,8 @@
     "shell": "firebase functions:shell",
     "start": "npm run shell",
     "deploy": "firebase deploy --only functions",
-    "logs": "firebase functions:log"
+    "logs": "firebase functions:log",
+    "web-push": "web-push"
   },
   "engines": {
     "node": "10"
@@ -16,7 +17,8 @@
   "dependencies": {
     "@sendgrid/mail": "^7.3.0",
     "firebase-admin": "^9.4.2",
-    "firebase-functions": "^3.13.0"
+    "firebase-functions": "^3.13.0",
+    "web-push": "^3.4.4"
   },
   "devDependencies": {
     "eslint": "^5.12.0",
