--- a/package.json
+++ b/package.json
@@ -34,7 +34,8 @@
     "v-money": "^0.8.1",
     "vuedraggable": "^2.24.3",
     "vuelidate": "^0.7.6",
-    "vuexfire": "^3.2.4"
+    "vuexfire": "^3.2.4",
+    "web-push": "^3.4.4"
   },
   "devDependencies": {
     "@quasar/app": "^2.0.0",
