--- a/.firebaserc
+++ b/.firebaserc
@@ -7,7 +7,7 @@
         ]
       }
     },
-    "prod": {
+    "production": {
       "hosting": {
         "production": [
           "donkeysgonewild.com"
