--- a/package.json
+++ b/package.json
@@ -15,9 +15,9 @@
     "emulators3": "firebase emulators:start --import=dir/base3",
     "emulators4": "firebase emulators:start --import=dir/base4",
     "test": "jest ./spec --detectOpenHandles",
-    "dev": "QENV=staging quasar dev",
-    "staging": "QENV=staging quasar dev",
-    "prod": "QENV=production quasar dev",
+    "dev": "firebase use default && QENV=staging quasar dev",
+    "staging": "firebase use default && QENV=staging quasar dev",
+    "prod": "firebase use default && QENV=production quasar dev",
     "deploy-to-staging": "firebase use default && QENV=staging quasar build -m pwa && firebase deploy",
     "deploy-to-production": "firebase use production && QENV=production quasar build -m pwa && firebase deploy"
   },
@@ -27,7 +27,8 @@
     "core-js": "^3.6.5",
     "cropperjs": "^1.5.9",
     "emoji-mart-vue": "^2.6.6",
-    "firebase": "^7.24.0",
+    "firebase": "^8.6.5",
+    "node-sass": "^4.14.0",
     "pica": "^6.1.1",
     "quasar": "^1.0.0",
     "v-money": "^0.8.1",
